Fixed left arrow position mobile

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -215,3 +215,6 @@ body {
     nav {
         display: none;
     }
+    div.backArr {
+        margin-left:-12px;
+    }
